--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.10"
+    "angular": "~1.2.10",
+    "normalize-css": "~2.1.3"
   }
 }
