--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "angular": "~1.2.10",
-    "normalize-css": "~2.1.3"
+    "normalize-css": "~2.1.3",
+    "FlipClock": "*",
+    "jquery": "~2.1.0"
   }
 }
