--- a/bower.json
+++ b/bower.json
@@ -18,9 +18,10 @@
   ],
   "dependencies": {
     "angular": "~1.2.10",
-    "normalize-css": "~2.1.3",
     "FlipClock": "*",
     "jquery": "~2.1.0",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "angular-bootstrap": "~0.10.0",
+    "bootstrap": "~3.1.0"
   }
 }
