--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery": "~2.1.0",
     "font-awesome": "~4.0.3",
     "angular-bootstrap": "~0.10.0",
-    "bootstrap": "~3.1.0"
+    "bootstrap": "~3.1.0",
+    "angular-route": "~1.2.14"
   }
 }
