Update angular and add package.json

--- a/bower.json
+++ b/bower.json
@@ -17,14 +17,14 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.10",
+    "angular": "~1.4.5",
+    "angular-route": "~1.4.5",
+    "angular-animate": "~1.4.5",
     "FlipClock": "*",
-    "jquery": "~2.1.0",
+    "jquery": "~2.1.4",
     "font-awesome": "~4.0.3",
     "angular-bootstrap": "~0.10.0",
     "bootstrap": "~3.1.0",
-    "angular-route": "~1.2.14",
-    "animate.css": "~3.1.0",
-    "angular-animate": "~1.2.14"
+    "animate.css": "~3.1.0"
   }
 }
